# Just-For-Fun-QT-VCpp

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.ui  source.bat
